# Robot-starter

./: .gitignore  Progress.md  README.md  Roadmap.md
docs/phase_notes/: phase-0.md  pre-phase.md
ros2_ws/src/robot_bringup/: package.xml  setup.py
ros2_ws/src/robot_bringup/launch/: launch.yaml  test_cmd_vel.launch.py
ros2_ws/src/robot_bringup/robot_bringup/: subscriber.py
ros2_ws/src/robot_core/: CMakeLists.txt  package.xml
ros2_ws/src/robot_core/src/: publisher.cpp
